<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp2"
        android:text="@string/exp_2" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp3"
        android:text="@string/exp_3" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp4"
        android:text="@string/exp_4" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp5"
        android:text="@string/exp_5" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/exp_6"
        android:onClick="nav2Exp6"/>

    <Button
        android:id="@+id/btn_7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp7"
        android:text="@string/exp_7" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/exp_8" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/exp_9" />

    <Button
        android:id="@+id/btn_10"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="nav2Exp7ContentResolver"
        android:text="@string/exp_10" />
</LinearLayout>